# perception

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
RANSAC/algo_utils/: projectLane.py  ransac.py
RANSAC/algo_utils/coords_to_directions/: coords_to_directions.py  test.py
RANSAC/plane_utils/: estimate.py  test.py  test_estimate.py  visualize.ipynb
StopSignDetection_YOLO/: StopSignDetectionModel.py  dataImport.py  test_onnx.py  trainModel.ipynb
data/: Datasets.md  removeOutliers.py  visualizePlaneAndPointCloud.py
lane_detection/: README.md  package.xml  setup.cfg  setup.py
lane_detection/lane_detection/: camera_image_publisher.py  postprocessing.py  ufld_onnx_inference.py  ufld_onnx_node.py  ufld_visualizer.py
lane_detection/models/: ufld_resnet34.onnx
onnx_model_old/: testModel_execute.py
perception_onnx/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
perception_onnx/perception_onnx/: ufld_onnx_inference.py
perception_onnx/perception_onnx/nodes/: camera_image_publisher.py  ufld_onnx_node.py
perception_onnx/test/: test_ufld_onnx_inference.py
ros2/perception_onnx/: README.md  setup.py
ros2/perception_onnx/perception_onnx/nodes/: image_publisher.py  ufld_onnx_node.py
warp_image/: warp.py
