<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>lane_detection</name>
  <version>0.1.0</version>

  <description>
    ROS2 Python package for Ultra-Fast Lane Detection (UFLD) using ONNX Runtime.
    Provides ONNX inference, ROS integration, and visualization utilities.
  </description>

  <maintainer email="khanzayan_123@hotmail.com">zayan</maintainer>
  <license>MIT</license>

  <!-- Core ROS dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Python runtime dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
